--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=order-service
 
+server.port=8083
 spring.datasource.url=jdbc:h2:mem:orderdb
 
 spring.h2.console.enabled=true
@@ -8,3 +9,8 @@ spring.h2.console.path=/h2-console
 # Swagger Configuration
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+# Eureka Configuration
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
