--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ management.endpoint.health.show-details=always
 eureka.instance.health-check-url-path=/actuator/health
 management.endpoints.web.base-path=/api/orders/actuator
 eureka.client.healthcheck.enabled=true
+
+jwt.expiration=8000000000
+jwt.secret=${SECRET_KEY}
