--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,6 @@ jwt.expiration=8000000000
 jwt.secret=${SECRET_KEY}
 
 # Logger Configuration
-logging.file.name=product.log
+logging.file.name=order.log
 logging.file.path=logs
 logging.level.root=INFO
