--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ jwt.secret=${SECRET_KEY}
 logging.file.name=order.log
 logging.file.path=logs
 logging.level.root=INFO
+
+# Zipkin Configuration
+management.tracing.sampling.probability=1.0
+management.tracing.enabled=true
