add resilience4j circuit breakers for product-service communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,9 @@ eureka.client.fetch-registry=true
 
 
 # Actuator Configuration
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=health,info,metrics
 management.endpoint.health.show-details=always
+management.health.circuitbreakers.enabled=true
 
 # Eureka Health Check
 eureka.instance.health-check-url-path=/actuator/health
@@ -36,3 +37,17 @@ logging.level.root=INFO
 # Zipkin Configuration
 management.tracing.sampling.probability=1.0
 management.tracing.enabled=true
+
+# Resilience4J Configuration
+resilience4j.circuitbreaker.instances.productBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.productBreaker.sliding-window-size=2
+resilience4j.circuitbreaker.instances.productBreaker.minimum-number-of-calls=2
+resilience4j.circuitbreaker.instances.productBreaker.permitted-number-of-calls-in-half-open-state=2
+resilience4j.circuitbreaker.instances.productBreaker.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.productBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.productBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.productBreaker.sliding-window-type=count_based
+resilience4j.circuitbreaker.instances.productBreaker.record-exceptions[0]=com.order.order_service.exceptions.ProductServiceException
+
+
+
