add resilience4j retry mechanism for product-service communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,5 +49,11 @@ resilience4j.circuitbreaker.instances.productBreaker.automatic-transition-from-o
 resilience4j.circuitbreaker.instances.productBreaker.sliding-window-type=count_based
 resilience4j.circuitbreaker.instances.productBreaker.record-exceptions[0]=com.order.order_service.exceptions.ProductServiceException
 
+# Retry Configuration
+resilience4j.retry.instances.productRetry.max-attempts=4
+resilience4j.retry.instances.productRetry.wait-duration=2s
+resilience4j.retry.instances.productRetry.retry-exceptions[0]=com.order.order_service.exceptions.ProductServiceException
+
+
 
 
