add resilience4j rate limiter to improve fault tolerance for product-service communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ management.tracing.sampling.probability=1.0
 management.tracing.enabled=true
 
 # Resilience4J Configuration
+# Circuit Breaker
 resilience4j.circuitbreaker.instances.productBreaker.register-health-indicator=true
 resilience4j.circuitbreaker.instances.productBreaker.sliding-window-size=2
 resilience4j.circuitbreaker.instances.productBreaker.minimum-number-of-calls=2
@@ -49,11 +50,14 @@ resilience4j.circuitbreaker.instances.productBreaker.automatic-transition-from-o
 resilience4j.circuitbreaker.instances.productBreaker.sliding-window-type=count_based
 resilience4j.circuitbreaker.instances.productBreaker.record-exceptions[0]=com.order.order_service.exceptions.ProductServiceException
 
-# Retry Configuration
+# Retry
 resilience4j.retry.instances.productRetry.max-attempts=4
 resilience4j.retry.instances.productRetry.wait-duration=2s
 resilience4j.retry.instances.productRetry.retry-exceptions[0]=com.order.order_service.exceptions.ProductServiceException
 
-
+# Rate Limiter
+resilience4j.ratelimiter.instances.productRateLimiter.limit-for-period=5
+resilience4j.ratelimiter.instances.productRateLimiter.limit-refresh-period=10s
+resilience4j.ratelimiter.instances.productRateLimiter.timeout-duration=2s
 
 
